[gd_scene load_steps=10 format=2]

[ext_resource path="res://characters/Ogre.gd" type="Script" id=1]
[ext_resource path="res://0x72_16x16DungeonTileset.v4.png" type="Texture" id=2]
[ext_resource path="res://characters/Bludgeon.tscn" type="PackedScene" id=3]
[ext_resource path="res://HealthManager.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/FootL:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics/FootR:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics/MainArmBase/ArmAnimPivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ -15.0, 0.0, 15.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Graphics/MainArmBase/TargetBase:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ), Vector2( 0, -2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -105.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics/Head:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( 2, -8 ), Vector2( 2, -7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/MainArmBase/ArmAnimPivot/ArmBack:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -1, 5.5 ), Vector2( -1, 5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics/ArmFront:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -11, 0.5 ), Vector2( -11, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -6 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Graphics/FootL:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Graphics/FootR:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Graphics/MainArmBase/ArmAnimPivot:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Graphics:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -6 ), Vector2( 0, -7 ), Vector2( 0, -6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Graphics/FootL:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Graphics/FootR:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Graphics/MainArmBase/ArmAnimPivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Ogre" type="KinematicBody2D" groups=[
"need_player_ref",
]]
collision_layer = 3
script = ExtResource( 1 )

[node name="Graphics" type="Node2D" parent="."]
position = Vector2( 0, -6 )

[node name="MainArmBase" type="Node2D" parent="Graphics"]
position = Vector2( 8, -5 )

[node name="ArmAnimPivot" type="Node2D" parent="Graphics/MainArmBase"]
rotation = -0.261799
scale = Vector2( 1, 1 )

[node name="ArmBack" type="Sprite" parent="Graphics/MainArmBase/ArmAnimPivot"]
position = Vector2( -1, 5.5 )
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 17, 161, 13, 14 )

[node name="Bludgeon" parent="Graphics/MainArmBase/ArmAnimPivot/ArmBack" instance=ExtResource( 3 )]

[node name="TargetBase" type="Node2D" parent="Graphics/MainArmBase"]
position = Vector2( -1, 12.5 )

[node name="Target" type="Node2D" parent="Graphics/MainArmBase/TargetBase"]
position = Vector2( 1, 27.5 )

[node name="Body" type="Sprite" parent="Graphics"]
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 102, 186, 19, 22 )

[node name="FootL" type="Sprite" parent="Graphics"]
visible = false
position = Vector2( -6, 11 )
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 104, 206, 5, 2 )

[node name="FootR" type="Sprite" parent="Graphics"]
position = Vector2( 5, 11 )
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 104, 206, 5, 2 )

[node name="Head" type="Sprite" parent="Graphics"]
position = Vector2( 2, -8 )
texture = ExtResource( 2 )
flip_h = true
region_enabled = true
region_rect = Rect2( 103, 182, 13, 13 )

[node name="ArmFront" type="Sprite" parent="Graphics"]
position = Vector2( -11, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 17, 161, 13, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/death = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/walk = SubResource( 5 )

[node name="HealthManager" parent="." instance=ExtResource( 4 )]
max_hp = 25
